Refactor security configuration: add security.json, update Dockerfile, and remove deprecated scripts for improved authentication management

--- a/cores/data/pgnc/conf/configoverlay.json
+++ b/cores/data/pgnc/conf/configoverlay.json
@@ -1,14 +1,15 @@
-
 {
-    "userProps":{"update.autoCreateFields":"false"},
-    "queryResponseWriter":{"velocity":{
-        "startup":"lazy",
-        "name":"velocity",
-        "class":"solr.VelocityResponseWriter",
-        "template.base.dir":"",
-        "solr.resource.loader.enabled":"true",
-        "params.resource.loader.enabled":"true"}},
-    "props":{"requestDispatcher":{"requestParsers":{
-          "enableRemoteStreaming":true,
-          "enableStreamBody":true}}}}
-  
+    "userProps": {
+        "update.autoCreateFields": "false"
+    },
+    "queryResponseWriter": {
+        "velocity": {
+            "startup": "lazy",
+            "name": "velocity",
+            "class": "solr.VelocityResponseWriter",
+            "template.base.dir": "",
+            "solr.resource.loader.enabled": "true",
+            "params.resource.loader.enabled": "true"
+        }
+    }
+}
